--- a/main.css
+++ b/main.css
@@ -8,6 +8,10 @@
   stroke-width: 1.5px;
 }
 
+.node:hover {
+  fill: red;
+}
+
 .d3-tip {
   line-height: 1;
   font-weight: bold;
@@ -28,4 +32,29 @@
   color: rgba(0, 0, 0, 0.8);
   position: absolute;
   pointer-events: none;
+}
+
+#priorityList {
+  display: flex;
+  flex-direction: column;
+}
+
+.priorityListItem {
+  text-align: center;
+  background: #ddddff;
+  width: 100%;
+  margin: 5px;
+  padding: 5px;
+}
+
+.priorityListItem.new {
+  background: #ddffdd;
+}
+
+.priorityListItem.updated {
+  background: #ccccff;
+}
+
+#window {
+  display: flex;
 }
